# MimicKit_IsaacLab

./: .gitignore  LICENSE  README.md  requirements.txt  setup.sh
config/: deepmimic_humanoid.yaml
data/assets/g1/: g1.xml  g1_simple.xml
data/assets/go2/: go2.xml
data/assets/humanoid/: humanoid.xml
data/assets/objects/: climbing_box.urdf  vault_box.urdf
data/assets/smpl/: smpl.xml
data/assets/sword_shield/: humanoid_sword_shield.xml
data/motions/g1/: g1_cartwheel.pkl  g1_run.pkl  g1_walk.pkl
data/motions/go2/: go2_pace.pkl  go2_run.pkl  go2_trot.pkl  go2_walk0.pkl  go2_walk1.pkl  go2_walk2.pkl  go2_walk3.pkl
data/motions/humanoid/: humanoid_backflip.pkl  humanoid_cartwheel.pkl  humanoid_crawl.pkl  humanoid_dance_a.pkl  humanoid_dance_b.pkl  humanoid_dance_spin.pkl  humanoid_getup_facedown.pkl  humanoid_getup_faceup.pkl  humanoid_jog.pkl  humanoid_jump.pkl  humanoid_kick.pkl  humanoid_punch.pkl  humanoid_roll.pkl  humanoid_run.pkl  humanoid_sideflip.pkl  (+4 more)
scripts/: compare.py  play.py  replay.py  train.py
source/mimickit_isaaclab/: __init__.py  pyproject.toml  setup.py
source/mimickit_isaaclab/anim/: __init__.py  kin_char_model.py  kin_char_model_g1.py  motion_lib.py
source/mimickit_isaaclab/assets/: __init__.py
source/mimickit_isaaclab/assets/Config/robots/: g1.py  smpl.py
source/mimickit_isaaclab/tasks/: __init__.py
source/mimickit_isaaclab/tasks/direct/: __init__.py
source/mimickit_isaaclab/tasks/direct/amp/: __init__.py  amp_env.py  amp_env_cfg.py  amp_g1_env.py  amp_g1_env_cfg.py
source/mimickit_isaaclab/tasks/direct/amp/agents/: __init__.py  rsl_rl_amp_g1_ppo_cfg.py
source/mimickit_isaaclab/tasks/direct/ase/: __init__.py  ase_env.py  ase_env_cfg.py  ase_g1_env.py  ase_g1_env_cfg.py
source/mimickit_isaaclab/tasks/direct/ase/agents/: __init__.py  rsl_rl_ase_g1_ppo_cfg.py
source/mimickit_isaaclab/tasks/direct/deepmimic/: __init__.py  deepmimic_env.py  deepmimic_env_cfg.py  deepmimic_g1_env.py  deepmimic_g1_env_cfg.py
source/mimickit_isaaclab/tasks/direct/deepmimic/agents/: __init__.py
source/mimickit_isaaclab/utils/: __init__.py  circular_buffer.py  logger.py
(+196 files in other folders)
